# ivory-rtverification

./: .gitignore  README.md  TODOs.md
gcc-plugin/: .gitignore  Makefile  README.md
gcc-plugin/sample/: record_assignment.c  sample.c
gcc-plugin/src/: instrument_plugin.c  utils.c  utils.h
rtv-example/: Makefile  instrumented-decls  rtv-example.cabal
rtv-example/example/: PropertiesExample.hs  checker_task.c  checker_task.h  main.c  monitored_task.c  monitored_task.h  record_assignment.c
rtv-lib/: rtv-lib.cabal
rtv-lib/build-tools/: find-instrumented.sh
rtv-lib/src/Ivory/RTVerification/: GenChecker.hs  GenSettersGetters.hs  Operators.hs  ParseVars.hs  Setup.hs  Types.hs
