name:                rtv-example
version:             0.1.0.0
author:              Galois, Inc. (Erlend Hamberg, Lee Pike)
maintainer:          leepike@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

flag debug-qq
  default:              False
  description:          Enable dumping of template-haskell splices

executable rtv-example
  main-is:              PropertiesExample.hs

  build-depends:        base >= 4.6
                      , rtv-lib
                      , ivory
                      , monadLib
                      , filepath
                      , directory
                      , mainland-pretty >= 0.2
                      , language-c-quote >= 0.7.1
                      , ivory-backend-c
                      , template-haskell >= 2.8
                      , process
                      , parsimony
  hs-source-dirs:       example
  default-language:     Haskell2010

  if flag(debug-qq)
    ghc-options:        -ddump-splices
  ghc-options:          -Wall
