name:                rtv-lib
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          leepike@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

-- data-files:          build-tools/find-instrumented.sh

flag debug-qq
  default:              False
  description:          Enable dumping of template-haskell splices

library
  exposed-modules:      Ivory.RTVerification.Operators
                        Ivory.RTVerification.GenChecker
                        Ivory.RTVerification.GenSettersGetters
                        Ivory.RTVerification.ParseVars
                        Ivory.RTVerification.Types

  build-depends:        base >= 4.6
                      , ivory
                      , monadLib
                      , filepath
                      , directory
                      , mainland-pretty >= 0.2
                      , language-c-quote >= 0.7.1
                      , ivory-backend-c
                      , template-haskell >= 2.8
                      , process
                      , parsimony
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
